[package]
name = "pool"
version = "0.1.0"
authors = ["RequescoS"]
edition = "2021"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
borsh = "0.9.3"
thiserror = "1.0.30"
solana-program = "1.9.9"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }


[dev-dependencies]
solana-program-test = "1.9.9"
solana-sdk = "1.9.9"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
spl-associated-token-account = "1.1.1"


[lib]
crate-type = ["cdylib", "lib"]